--- a/index.html
+++ b/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- =-= Meta Info =-= -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- =-= Meta Info =-= -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- =-= Favicon =-= -->
-  <link rel="shortcut icon" href="./assets/images/fav-icon.png" type="image/x-icon">
+    <!-- =-= Favicon =-= -->
+    <link
+      rel="shortcut icon"
+      href="./assets/images/fav-icon.png"
+      type="image/x-icon"
+    />
 
-  <!-- =-= Connected Stylesheet =-= -->
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Flower Shop</title>
-</head>
-<body>
-  
-  
-</body>
+    <!-- =-= Connected Stylesheet =-= -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Flower Shop</title>
+  </head>
+  <body>
+    <!-- =-= Header Section =-= -->
+    <header>
+      <section class="hero section">
+        <div class="container">
+          <div class="hero__content">
+            <div class="hero__text-wrap">
+              <h2 class="hero__title">
+                Let's make beautiful flowers a part of your life.
+              </h2>
+              <p class="hero__text">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+                The point of using Lorem Ipsum is that it has a more-or-less
+                normal distribution of letters.
+              </p>
+              <div class="hero__btn-wrap">
+                <button class="hero__btn">Shop Now</button>
+              </div>
+            </div>
+            <div class="hero__thumb-wrap">
+              <img
+                src="./assets/images/pngwing_10.png"
+                alt="Hero Thumbnail"
+                class="hero__thumb"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
