I have done Feature section murkup

--- a/index.html
+++ b/index.html
@@ -47,7 +47,49 @@
         </div>
       </section>
     </header>
-    <main></main>
+
+    <main>
+      <!-- =-= Feature Section =-= -->
+      <section class="feature section">
+        <div class="container">
+          <div class="feature__content">
+            <div class="feature__head">
+              <h2 class="feature__title">Our Featured Flowers</h2>
+              <p class="feature__text">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+            </div>            
+            <div class="feature__flowers">
+              <div class="flower__item">
+                <div class="flower__item-body">
+                  <img src="./assets/images/pngwing_6.png" alt="Flower Item" />
+                </div>
+                <div class="flower__item-footer">
+                  <a href="#" class="flower__item-text"> Pink Flower Tree </a>
+                </div>
+              </div>
+              <div class="flower__item">
+                <div class="flower__item-body">
+                  <img src="./assets/images/pngwing_5.png" alt="Flower Item" />
+                </div>
+                <div class="flower__item-footer">
+                  <a href="#" class="flower__item-text"> Pink Flower Tree </a>
+                </div>
+              </div>
+              <div class="flower__item">
+                <div class="flower__item-body">
+                  <img src="./assets/images/pngwing_7.png" alt="Flower Item" />
+                </div>
+                <div class="flower__item-footer">
+                  <a href="#" class="flower__item-text"> Pink Flower Tree </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>      
+    </main>
     <footer></footer>
   </body>
 </html>
