--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
               </p>
-            </div>            
+            </div>
             <div class="feature__flowers">
               <div class="flower__item">
                 <div class="flower__item-body">
@@ -88,7 +88,47 @@
             </div>
           </div>
         </div>
-      </section>      
+      </section>
+
+      <!-- Service Section -->
+      <section class="service">
+        <div class="container">
+          <div class="service__content">
+            <div class="services">
+              <div class="service__item">
+                <img
+                  src="./assets/images/Group_57.png"
+                  alt="Service Icon"
+                  class="service__icon"
+                />
+                <h3 class="service__item-text">
+                  Same Day Delivery. Click & Collect.
+                </h3>
+              </div>
+              <div class="service__item">
+                <img
+                  src="./assets/images/Group_58.png"
+                  alt="Service Icon"
+                  class="service__icon"
+                />
+                <h3 class="service__item-text">
+                  Same Day Delivery. Click & Collect.
+                </h3>
+              </div>
+              <div class="service__item">
+                <img
+                  src="./assets/images/Group_59.png"
+                  alt="Service Icon"
+                  class="service__icon"
+                />
+                <h3 class="service__item-text">
+                  Same Day Delivery. Click & Collect.
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
