I have done on Hot deal Murkup

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </section>
 
-      <!-- Service Section -->
+      <!-- =-= Service Section =-= -->
       <section class="service">
         <div class="container">
           <div class="service__content">
@@ -125,6 +125,27 @@
                   Same Day Delivery. Click & Collect.
                 </h3>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- =-= Hot Deal Section =-= -->
+      <section class="deal section">
+        <div class="container">
+          <div class="deal__content">
+            <div class="deal__text">
+              <h2 class="deal__title">Hot Deal ! Sale Up To 25% Off</h2>
+              <p class="deal__text">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+              <div class="deal__btn-wrap">
+                <button class="hero__btn">Sign Up</button>
+              </div>
+            </div>
+            <div class="deal__img-wrap">
+              <img src="./assets/images/pngwing8.png" alt="Deal Image" class="deal__img">
             </div>
           </div>
         </div>
