I have fineshed the Instagrap Murkup section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,57 @@
               </div>
             </div>
             <div class="deal__img-wrap">
-              <img src="./assets/images/pngwing8.png" alt="Deal Image" class="deal__img">
+              <img
+                src="./assets/images/pngwing8.png"
+                alt="Deal Image"
+                class="deal__img"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- =-= Instagram Section =-= -->
+      <section class="instagram section">
+        <div class="container">
+          <div class="instagram__content">
+            <div class="instagram__head">
+              <h2 class="instagram__title">Instagram</h2>
+              <p class="instagram__text">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+            </div>
+
+            <div class="instagram__categories">
+              <div class="category__item">
+                <img
+                  class="category__item-img"
+                  src="./assets/images/Flower01.png"
+                  alt="Flower Item"
+                />
+              </div>
+              <div class="category__item">
+                <img
+                  class="category__item-img"
+                  src="./assets/images/Rectangle4.png"
+                  alt="Flower Item"
+                />
+              </div>
+              <div class="category__item">
+                <img
+                  class="category__item-img"
+                  src="./assets/images/Rectangle5.png"
+                  alt="Flower Item"
+                />
+              </div>
+              <div class="category__item">
+                <img
+                  class="category__item-img"
+                  src="./assets/images/Rectangle6.png"
+                  alt="Flower Item"
+                />
+              </div>
             </div>
           </div>
         </div>
