--- a/index.html
+++ b/index.html
@@ -200,6 +200,28 @@
           </div>
         </div>
       </section>
+
+      <!-- =-= Subscribe Section =-= -->
+      <section class="subscribe section">
+        <div class="container">
+          <div class="subscribe__content">
+            <div class="subscribe__head">
+              <h2 class="subscribe__title">Get The Latest Deals</h2>
+              <p class="subscribe__text">$30 coupon for first shopping</p>
+            </div>
+            <div class="subscribe__form">
+              <form action="#">
+                <div class="subscribe__email">
+                  <input class="subscribe__email-input" type="email" name="email" placeholder="Enter your email here....">
+                </div>
+                <div class="subscribe__btn">
+                  <input class="subscribe__btn-input" type="submit" value="Subscribe">
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
