I have finished the contact section

--- a/index.html
+++ b/index.html
@@ -212,13 +212,64 @@
             <div class="subscribe__form">
               <form action="#">
                 <div class="subscribe__email">
-                  <input class="subscribe__email-input" type="email" name="email" placeholder="Enter your email here....">
+                  <input
+                    class="subscribe__email-input"
+                    type="email"
+                    name="email"
+                    placeholder="Enter your email here...."
+                  />
                 </div>
                 <div class="subscribe__btn">
-                  <input class="subscribe__btn-input" type="submit" value="Subscribe">
+                  <input
+                    class="subscribe__btn-input"
+                    type="submit"
+                    value="Subscribe"
+                  />
                 </div>
               </form>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- =-= Contact Section =-= -->
+      <section class="contact section">
+        <div class="container">
+          <div class="contact__content">
+            <div class="contact__head">
+              <h2 class="contact__title">Contact Us</h2>
+              <p class="contact__text">Feel free to contact with us.</p>
+            </div>
+
+            <form action="#">
+              <div class="contact__form">
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Enter your name"
+                  />
+                </div>
+                <div class="form__group">
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Enter your email"
+                  />
+                </div>
+                <div class="form__group">
+                  <textarea
+                    class="form__textarea"
+                    cols="30"
+                    rows="10"
+                    placeholder="Enter your message..."
+                  ></textarea>
+                </div>
+              </div>
+              <div class="form__submit">
+                <input type="submit" value="Submit">
+              </div>
+            </form>
           </div>
         </div>
       </section>
