I have finished on footer section

--- a/index.html
+++ b/index.html
@@ -267,13 +267,28 @@
                 </div>
               </div>
               <div class="form__submit">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" />
               </div>
             </form>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <!-- =-= Footer Section =-= -->
+    <footer>
+      <div class="container">
+        <div class="footer__content">
+          <h2 class="footer__title">FlowerShop</h2>
+          <span class="footer__text">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </span>
+          <p class="footer__copywright">
+            &copy; 2020-2023, FlowerShop.com. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
