I have finished on the feature section stlye

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="feature__flowers">
               <div class="flower__item">
-                <div class="flower__item-body">
+                <div class="flower__item-body light--pink">
                   <img src="./assets/images/pngwing_6.png" alt="Flower Item" />
                 </div>
                 <div class="flower__item-footer">
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="flower__item">
-                <div class="flower__item-body">
+                <div class="flower__item-body light--cyan">
                   <img src="./assets/images/pngwing_5.png" alt="Flower Item" />
                 </div>
                 <div class="flower__item-footer">
@@ -78,7 +78,7 @@
                 </div>
               </div>
               <div class="flower__item">
-                <div class="flower__item-body">
+                <div class="flower__item-body light--green">
                   <img src="./assets/images/pngwing_7.png" alt="Flower Item" />
                 </div>
                 <div class="flower__item-footer">
@@ -91,7 +91,7 @@
       </section>
 
       <!-- =-= Service Section =-= -->
-      <section class="service">
+      <section class="service section">
         <div class="container">
           <div class="service__content">
             <div class="services">
