I have finished Service Section style

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                   alt="Service Icon"
                   class="service__icon"
                 />
-                <h3 class="service__item-text">
-                  Same Day Delivery. Click & Collect.
-                </h3>
+                <p class="service__item-text">
+                  Same Day Delivery.
+                </h>
               </div>
               <div class="service__item">
                 <img
@@ -111,9 +111,9 @@
                   alt="Service Icon"
                   class="service__icon"
                 />
-                <h3 class="service__item-text">
-                  Same Day Delivery. Click & Collect.
-                </h3>
+                <p class="service__item-text">
+                  Fresh Flowers.
+                </p>
               </div>
               <div class="service__item">
                 <img
@@ -121,9 +121,9 @@
                   alt="Service Icon"
                   class="service__icon"
                 />
-                <h3 class="service__item-text">
-                  Same Day Delivery. Click & Collect.
-                </h3>
+                <p class="service__item-text">
+                  24/7 Free Support.
+                </p>
               </div>
             </div>
           </div>
