I have finished Hot Deal Section

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
       <section class="deal section">
         <div class="container">
           <div class="deal__content">
-            <div class="deal__text">
-              <h2 class="deal__title">Hot Deal ! Sale Up To 25% Off</h2>
+            <div class="deal__text-wrap">
+              <h2 class="deal__title">Hot Deal ! Sale Up To 25% <span class="title--primary">Off</span></h2>
               <p class="deal__text">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
