--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
               <h2 class="subscribe__title">Get The Latest Deals</h2>
               <p class="subscribe__text">$30 coupon for first shopping</p>
             </div>
-            <div class="subscribe__form">
-              <form action="#">
+            <form action="#">
+              <div class="subscribe__form">
                 <div class="subscribe__email">
                   <input
                     class="subscribe__email-input"
@@ -221,13 +221,13 @@
                 </div>
                 <div class="subscribe__btn">
                   <input
-                    class="subscribe__btn-input"
+                    class="hero__btn"
                     type="submit"
                     value="Subscribe"
                   />
                 </div>
-              </form>
-            </div>
+              </div>
+            </form>
           </div>
         </div>
       </section>
