Contact Section Done

--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
                   alt="Service Icon"
                   class="service__icon"
                 />
-                <p class="service__item-text">
-                  Same Day Delivery.
-                </h>
+                <p class="service__item-text">Same Day Delivery.</p>
               </div>
               <div class="service__item">
                 <img
@@ -111,9 +109,7 @@
                   alt="Service Icon"
                   class="service__icon"
                 />
-                <p class="service__item-text">
-                  Fresh Flowers.
-                </p>
+                <p class="service__item-text">Fresh Flowers.</p>
               </div>
               <div class="service__item">
                 <img
@@ -121,9 +117,7 @@
                   alt="Service Icon"
                   class="service__icon"
                 />
-                <p class="service__item-text">
-                  24/7 Free Support.
-                </p>
+                <p class="service__item-text">24/7 Free Support.</p>
               </div>
             </div>
           </div>
@@ -135,7 +129,10 @@
         <div class="container">
           <div class="deal__content">
             <div class="deal__text-wrap">
-              <h2 class="deal__title">Hot Deal ! Sale Up To 25% <span class="title--primary">Off</span></h2>
+              <h2 class="deal__title">
+                Hot Deal ! Sale Up To 25%
+                <span class="title--primary">Off</span>
+              </h2>
               <p class="deal__text">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
@@ -220,11 +217,7 @@
                   />
                 </div>
                 <div class="subscribe__btn">
-                  <input
-                    class="hero__btn"
-                    type="submit"
-                    value="Subscribe"
-                  />
+                  <input class="hero__btn" type="submit" value="Subscribe" />
                 </div>
               </div>
             </form>
@@ -241,35 +234,44 @@
               <p class="contact__text">Feel free to contact with us.</p>
             </div>
 
-            <form action="#">
-              <div class="contact__form">
-                <div class="form__group">
-                  <input
-                    type="text"
-                    class="form__input"
-                    placeholder="Enter your name"
-                  />
-                </div>
-                <div class="form__group">
-                  <input
-                    type="email"
-                    class="form__input"
-                    placeholder="Enter your email"
-                  />
-                </div>
-                <div class="form__group">
-                  <textarea
-                    class="form__textarea"
-                    cols="30"
-                    rows="10"
-                    placeholder="Enter your message..."
-                  ></textarea>
-                </div>
+            <div class="contact__info">
+              <div class="contact__thumb-wrap">
+                <img
+                  src="./assets/images/contactimg.jpg"
+                  alt="Flower Inside Contact"
+                  class="contact__thum"
+                />
               </div>
-              <div class="form__submit">
-                <input type="submit" value="Submit" />
-              </div>
-            </form>
+              <form action="#" class="contact__form-wrap">
+                <div class="contact__form">
+                  <div class="form__group">
+                    <input
+                      type="text"
+                      class="form__input"
+                      placeholder="Enter your name"
+                    />
+                  </div>
+                  <div class="form__group">
+                    <input
+                      type="email"
+                      class="form__input"
+                      placeholder="Enter your email"
+                    />
+                  </div>
+                  <div class="form__group">
+                    <textarea
+                      class="form__textarea"
+                      cols="30"
+                      rows="10"
+                      placeholder="Enter your message..."
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="form__submit">
+                  <input class="hero__btn" type="submit" value="Submit" />
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </section>
