I have finished total section

--- a/index.html
+++ b/index.html
@@ -279,18 +279,20 @@
 
     <!-- =-= Footer Section =-= -->
     <footer>
-      <div class="container">
-        <div class="footer__content">
-          <h2 class="footer__title">FlowerShop</h2>
-          <span class="footer__text">
-            It is a long established fact that a reader will be distracted by
-            the readable content of a page when looking at its layout.
-          </span>
-          <p class="footer__copywright">
-            &copy; 2020-2023, FlowerShop.com. All rights reserved.
-          </p>
+      <section class="footer section">
+        <div class="container">
+          <div class="footer__content">
+            <h2 class="footer__title"><span class="title--primary">Flower</span>Shop</h2>
+            <span class="footer__text">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </span>
+            <p class="footer__copyright">
+              &copy; 2020-2023, FlowerShop.com. All rights reserved.
+            </p>
+          </div>
         </div>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
